--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "tsc",
     "migrate:make": "knex migrate:make",
     "migrate:latest": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback"
+    "migrate:rollback": "knex migrate:rollback",
+    "migrate:rollback:all": "knex migrate:rollback --all",
+    "migrate:reset": "knex migrate:reset",
+    "migrate:status": "knex migrate:status"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -34,7 +37,6 @@
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.35",
-    "@types/mysql": "^2.15.24",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
