feat: successfully login action

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,7 @@ GOOGLE_CALLBACK_URL=http://localhost:3001/api/auth/google/callback
 SEED_ADMIN_EMAIL=admin@example.com
 SEED_ADMIN_PASSWORD=password123
 SEED_USER_EMAIL=user@example.com
-SEED_USER_PASSWORD=password123 
+SEED_USER_PASSWORD=password123
+
+# Timezone Configuration
+TIMEZONE=Asia/Jakarta
