--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
+    "moment-timezone": "^0.5.46",
     "mysql2": "^3.6.5",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -36,13 +37,13 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/knex": "^0.16.1",
     "@types/node": "^18.15.11",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.35",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "@types/knex": "^0.16.1"
+    "typescript": "^5.0.4"
   }
-} 
+}
