feat: email validation

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,14 @@ SEED_USER_PASSWORD=password123
 
 # Timezone Configuration
 TIMEZONE=Asia/Jakarta
+
+# Email Configuration
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@example.com
+SMTP_PASS=your-email-password
+SMTP_FROM=noreply@example.com
+
+# Frontend URL for email verification
+FRONTEND_URL=http://localhost:3000
