--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "moment-timezone": "^0.5.46",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -40,6 +40,7 @@
     "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/knex": "^0.16.1",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^18.15.11",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
