--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
   "name": "incit-auth-be",
   "version": "1.0.0",
-  "description": "Backend for authentication system",
-  "main": "src/index.ts",
+  "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "migrate:make": "knex migrate:make",
-    "migrate:latest": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback",
-    "migrate:rollback:all": "knex migrate:rollback --all",
-    "migrate:reset": "knex migrate:reset",
-    "migrate:status": "knex migrate:status",
-    "seed:make": "knex seed:make",
-    "seed:run": "knex seed:run",
-    "db:refresh": "ts-node ./node_modules/.bin/knex migrate:rollback --all && ts-node ./node_modules/.bin/knex migrate:latest && ts-node ./node_modules/.bin/knex seed:run"
+    "migrate": "npx knex migrate:latest",
+    "migrate:rollback": "npx knex migrate:rollback",
+    "migrate:make": "npx knex migrate:make",
+    "seed": "npx knex seed:run",
+    "seed:make": "npx knex seed:make",
+    "test": "jest"
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.16",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "moment-timezone": "^0.5.46",
@@ -31,9 +30,11 @@
     "nodemailer": "^6.9.16",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
