--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,37 @@
-PORT=3001
-DB_USER=your_mysql_user
-DB_HOST=localhost
-DB_NAME=auth_db
-DB_PASSWORD=your_mysql_password
+# Application
+APP_NAME=your_app_name
+APP_PORT=3000
+ENV_MODE=development
+APP_TIMEZONE=UTC
+
+# CORS Configuration
+CORS_ORIGIN=https://your-frontend-domain.com,http://localhost:3000
+
+# Frontend URL for email verification
+FRONTEND_URL=http://localhost:3000
+
+# Database - Development
+DB_DRIVER=mysql2
+DB_USER=your_db_user
 DB_PORT=3306
-JWT_SECRET=your_jwt_secret
+DB_HOST=localhost
+DB_NAME=your_db_name
+DB_PASSWORD=your_db_password
+
+# Google OAuth
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
-GOOGLE_CALLBACK_URL=http://localhost:3001/api/auth/google/callback
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
-# Seeder Configuration
-SEED_ADMIN_EMAIL=admin@example.com
-SEED_ADMIN_PASSWORD=password123
-SEED_USER_EMAIL=user@example.com
-SEED_USER_PASSWORD=password123
-
-# Timezone Configuration
-TIMEZONE=Asia/Jakarta
+# Facebook OAuth
+FACEBOOK_APP_ID=your_facebook_app_id
+FACEBOOK_APP_SECRET=your_facebook_app_secret
+FACEBOOK_CALLBACK_URL=http://localhost:3000/auth/facebook/callback
 
 # Email Configuration
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=your-email@example.com
-SMTP_PASS=your-email-password
-SMTP_FROM=noreply@example.com
-
-# Frontend URL for email verification
-FRONTEND_URL=http://localhost:3000
+SMTP_USER=your_email@example.com
+SMTP_PASS=your_email_password
+SMTP_FROM=your_email@example.com
